--- a/GitStars/Application/Base.lproj/LaunchScreen.storyboard
+++ b/GitStars/Application/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,42 +17,92 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchScreenGitStars" translatesAutoresizingMaskIntoConstraints="NO" id="19o-qL-vta">
-                                <rect key="frame" x="-7" y="204.5" width="428" height="487"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logoGama" translatesAutoresizingMaskIntoConstraints="NO" id="Qm5-gs-1bh">
-                                <rect key="frame" x="44" y="779" width="175" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logoIdwall" translatesAutoresizingMaskIntoConstraints="NO" id="UzW-0m-drU">
-                                <rect key="frame" x="276" y="779" width="95" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="sponsored by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBf-Zb-k1k">
-                                <rect key="frame" x="163" y="749" width="110" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hke-pg-j8z">
-                                <rect key="frame" x="77" y="84" width="283.5" height="60"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LYo-yY-kuH">
+                                <rect key="frame" x="0.0" y="736" width="414" height="160"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="developed by" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pHH-vc-p91">
-                                        <rect key="frame" x="0.0" y="0.0" width="108.5" height="60"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sponsored by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBf-Zb-k1k">
+                                        <rect key="frame" x="152.5" y="20" width="109.5" height="21.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <color key="textColor" name="PrimaryLabelColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoGitStars" translatesAutoresizingMaskIntoConstraints="NO" id="HAa-CM-86I">
-                                        <rect key="frame" x="108.5" y="0.0" width="175" height="60"/>
-                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uY0-iU-0lv">
+                                        <rect key="frame" x="74.5" y="59" width="265" height="51"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoGama" translatesAutoresizingMaskIntoConstraints="NO" id="Qm5-gs-1bh">
+                                                <rect key="frame" x="0.0" y="0.0" width="175" height="51"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoIdwall" translatesAutoresizingMaskIntoConstraints="NO" id="UzW-0m-drU">
+                                                <rect key="frame" x="185" y="0.0" width="80" height="51"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="BaV-q2-mCd"/>
+                                    <constraint firstItem="uY0-iU-0lv" firstAttribute="centerX" secondItem="LYo-yY-kuH" secondAttribute="centerX" id="J4b-KG-mzT"/>
+                                    <constraint firstItem="UBf-Zb-k1k" firstAttribute="top" secondItem="LYo-yY-kuH" secondAttribute="top" constant="20" id="dpu-v8-bxj"/>
+                                    <constraint firstItem="UBf-Zb-k1k" firstAttribute="centerX" secondItem="LYo-yY-kuH" secondAttribute="centerX" id="dqK-HX-vv5"/>
+                                    <constraint firstAttribute="bottom" secondItem="uY0-iU-0lv" secondAttribute="bottom" constant="50" id="hl9-3p-8km"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7gj-Pb-AEf">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Hke-pg-j8z">
+                                        <rect key="frame" x="55.5" y="50" width="303.5" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="developed by" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pHH-vc-p91">
+                                                <rect key="frame" x="0.0" y="0.0" width="108.5" height="60"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoGitStars" translatesAutoresizingMaskIntoConstraints="NO" id="HAa-CM-86I">
+                                                <rect key="frame" x="128.5" y="0.0" width="175" height="60"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Hke-pg-j8z" firstAttribute="centerX" secondItem="7gj-Pb-AEf" secondAttribute="centerX" id="0FS-tl-r0l"/>
+                                    <constraint firstItem="Hke-pg-j8z" firstAttribute="top" secondItem="7gj-Pb-AEf" secondAttribute="top" constant="50" id="lqH-iF-ZJE"/>
+                                    <constraint firstAttribute="height" constant="160" id="swP-LO-btH"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="11w-j0-SKZ">
+                                <rect key="frame" x="0.0" y="298" width="414" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="aCs-kf-doJ"/>
+                                </constraints>
+                            </view>
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenGitStars" translatesAutoresizingMaskIntoConstraints="NO" id="ckm-n9-HwS">
+                                <rect key="frame" x="50" y="298" width="314" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="GDb-iK-hkn"/>
+                                </constraints>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="PrimaryBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7gj-Pb-AEf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2BK-UD-a3Z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ckm-n9-HwS" secondAttribute="trailing" constant="50" id="5oG-x4-xUa"/>
+                            <constraint firstItem="7gj-Pb-AEf" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Gl4-fb-vHI"/>
+                            <constraint firstAttribute="bottom" secondItem="LYo-yY-kuH" secondAttribute="bottom" id="HdR-yE-ByB"/>
+                            <constraint firstItem="11w-j0-SKZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="M60-1A-aUq"/>
+                            <constraint firstItem="ckm-n9-HwS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="P0J-WW-YnE"/>
+                            <constraint firstItem="ckm-n9-HwS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="TAe-Qq-qxp"/>
+                            <constraint firstItem="LYo-yY-kuH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TRE-7J-eRb"/>
+                            <constraint firstItem="11w-j0-SKZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="h7U-de-dqz"/>
+                            <constraint firstItem="11w-j0-SKZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ku8-q3-UFm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="11w-j0-SKZ" secondAttribute="trailing" id="sLc-TG-a0l"/>
+                            <constraint firstItem="7gj-Pb-AEf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="wum-1S-nSA"/>
+                            <constraint firstItem="LYo-yY-kuH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yY4-oH-ZMN"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -66,11 +115,8 @@
         <image name="logoGama" width="175" height="51"/>
         <image name="logoGitStars" width="175" height="60"/>
         <image name="logoIdwall" width="80" height="43"/>
-        <namedColor name="PrimaryLabelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="PrimaryBackgroundColor">
+            <color red="0.33300000429153442" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
